cmake_minimum_required(VERSION 3.19)
project(sfmltest)
set(CMAKE_CXX_STANDARD 14)
add_executable(sfmltest main.cpp GameMap.cpp GameMap.h Game.cpp Game.h Camera.cpp Camera.h GameEntity.cpp GameEntity.h TestEntity.cpp TestEntity.h RectangleArea.cpp MovableEntity.cpp MovableEntity.h GameEvent.cpp GameEvent.h Tick.cpp Tick.h Player.cpp Player.h PlayerColour.h MapFilling.cpp MapFilling.h ActionRequest.cpp ActionRequest.h ActionType.h EntityState.h)
set(SFML_STATIC_LIBRARIES TRUE)
set(SFML_DIR E:/SFML-2.5.1-windows-gcc-7.3.0-mingw-64-bit/SFML-2.5.1/lib/cmake/SFML)
find_package(SFML COMPONENTS system window graphics audio network REQUIRED)
include_directories(E:/SFML-2.5.1-windows-gcc-7.3.0-mingw-64-bit/SFML-2.5.1/include)
target_link_libraries(sfmltest sfml-system sfml-window sfml-graphics sfml-audio )